gen/PizzaParser.java
// Generated from C:/Veebirakendused/New folder/Pizza/grammar\Pizza.g4 by ANTLR 4.x
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PizzaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__19=1, T__18=2, T__17=3, T__16=4, T__15=5, T__14=6, T__13=7, T__12=8, 
		T__11=9, T__10=10, T__9=11, T__8=12, T__7=13, T__6=14, T__5=15, T__4=16, 
		T__3=17, T__2=18, T__1=19, T__0=20, Nimi=21, Arv=22, WS=23;
	public static final String[] tokenNames = {
		"<INVALID>", "'showMenu();'", "'showWithoutIngredient('", "','", "'createMenu();'", 
		"'showWithIngredient('", "'setMenuName('", "'showWithType('", "');'", 
		"':'", "'='", "';'", "'add new pizza'", "'hind:'", "'{'", "'showWithoutType('", 
		"'nimi'", "'add new ingredient'", "'add'", "'}'", "'createIngredients();'", 
		"Nimi", "Arv", "WS"
	};
	public static final int
		RULE_pizza = 0, RULE_pizza2 = 1, RULE_show = 2, RULE_createM = 3, RULE_setName = 4, 
		RULE_createIn = 5, RULE_addi = 6, RULE_addp = 7, RULE_add = 8;
	public static final String[] ruleNames = {
		"pizza", "pizza2", "show", "createM", "setName", "createIn", "addi", "addp", 
		"add"
	};

	@Override
	public String getGrammarFileName() { return "Pizza.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PizzaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PizzaContext extends ParserRuleContext {
		public PizzaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pizza; }
	 
		public PizzaContext() { }
		public void copyFrom(PizzaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PizzaRContext extends PizzaContext {
		public Pizza2Context pizza2() {
			return getRuleContext(Pizza2Context.class,0);
		}
		public PizzaRContext(PizzaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterPizzaR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitPizzaR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitPizzaR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PizzaContext pizza() throws RecognitionException {
		PizzaContext _localctx = new PizzaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pizza);
		try {
			_localctx = new PizzaRContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(18); pizza2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pizza2Context extends ParserRuleContext {
		public Pizza2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pizza2; }
	 
		public Pizza2Context() { }
		public void copyFrom(Pizza2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Pizza2RContext extends Pizza2Context {
		public AddpContext addp(int i) {
			return getRuleContext(AddpContext.class,i);
		}
		public AddiContext addi(int i) {
			return getRuleContext(AddiContext.class,i);
		}
		public ShowContext show(int i) {
			return getRuleContext(ShowContext.class,i);
		}
		public CreateInContext createIn() {
			return getRuleContext(CreateInContext.class,0);
		}
		public List<ShowContext> show() {
			return getRuleContexts(ShowContext.class);
		}
		public SetNameContext setName() {
			return getRuleContext(SetNameContext.class,0);
		}
		public List<AddiContext> addi() {
			return getRuleContexts(AddiContext.class);
		}
		public CreateMContext createM() {
			return getRuleContext(CreateMContext.class,0);
		}
		public List<AddpContext> addp() {
			return getRuleContexts(AddpContext.class);
		}
		public Pizza2RContext(Pizza2Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterPizza2R(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitPizza2R(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitPizza2R(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pizza2Context pizza2() throws RecognitionException {
		Pizza2Context _localctx = new Pizza2Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_pizza2);
		int _la;
		try {
			_localctx = new Pizza2RContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(20); createM();
			setState(22);
			_la = _input.LA(1);
			if (_la==6) {
				{
				setState(21); setName();
				}
			}

			setState(25);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 5) | (1L << 7) | (1L << 15))) != 0)) {
				{
				setState(24); show();
				}
			}

			setState(27); createIn();
			setState(29); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(28); addi();
				}
				}
				setState(31); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==17 );
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==12) {
				{
				{
				setState(33); addp();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 5) | (1L << 7) | (1L << 15))) != 0)) {
				{
				{
				setState(39); show();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowContext extends ParserRuleContext {
		public ShowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show; }
	 
		public ShowContext() { }
		public void copyFrom(ShowContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NaitaKoostisegaContext extends ShowContext {
		public TerminalNode Nimi() { return getToken(PizzaParser.Nimi, 0); }
		public NaitaKoostisegaContext(ShowContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterNaitaKoostisega(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitNaitaKoostisega(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitNaitaKoostisega(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NaitaTuubitaContext extends ShowContext {
		public TerminalNode Nimi() { return getToken(PizzaParser.Nimi, 0); }
		public NaitaTuubitaContext(ShowContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterNaitaTuubita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitNaitaTuubita(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitNaitaTuubita(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NaitaTuubigaContext extends ShowContext {
		public TerminalNode Nimi() { return getToken(PizzaParser.Nimi, 0); }
		public NaitaTuubigaContext(ShowContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterNaitaTuubiga(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitNaitaTuubiga(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitNaitaTuubiga(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NaitaMenuuContext extends ShowContext {
		public NaitaMenuuContext(ShowContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterNaitaMenuu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitNaitaMenuu(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitNaitaMenuu(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NaitaKoostisetaContext extends ShowContext {
		public TerminalNode Nimi() { return getToken(PizzaParser.Nimi, 0); }
		public NaitaKoostisetaContext(ShowContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterNaitaKoostiseta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitNaitaKoostiseta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitNaitaKoostiseta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShowContext show() throws RecognitionException {
		ShowContext _localctx = new ShowContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_show);
		try {
			setState(58);
			switch (_input.LA(1)) {
			case 2:
				_localctx = new NaitaKoostisetaContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(45); match(2);
				setState(46); match(Nimi);
				setState(47); match(8);
				}
				break;
			case 5:
				_localctx = new NaitaKoostisegaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(48); match(5);
				setState(49); match(Nimi);
				setState(50); match(8);
				}
				break;
			case 15:
				_localctx = new NaitaTuubitaContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(51); match(15);
				setState(52); match(Nimi);
				setState(53); match(8);
				}
				break;
			case 7:
				_localctx = new NaitaTuubigaContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(54); match(7);
				setState(55); match(Nimi);
				setState(56); match(8);
				}
				break;
			case 1:
				_localctx = new NaitaMenuuContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(57); match(1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateMContext extends ParserRuleContext {
		public CreateMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createM; }
	 
		public CreateMContext() { }
		public void copyFrom(CreateMContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LoomenuuContext extends CreateMContext {
		public LoomenuuContext(CreateMContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterLoomenuu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitLoomenuu(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitLoomenuu(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateMContext createM() throws RecognitionException {
		CreateMContext _localctx = new CreateMContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createM);
		try {
			_localctx = new LoomenuuContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetNameContext extends ParserRuleContext {
		public SetNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setName; }
	 
		public SetNameContext() { }
		public void copyFrom(SetNameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MenuuNimiContext extends SetNameContext {
		public TerminalNode Nimi() { return getToken(PizzaParser.Nimi, 0); }
		public MenuuNimiContext(SetNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterMenuuNimi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitMenuuNimi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitMenuuNimi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetNameContext setName() throws RecognitionException {
		SetNameContext _localctx = new SetNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_setName);
		try {
			_localctx = new MenuuNimiContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(62); match(6);
			setState(63); match(Nimi);
			setState(64); match(8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateInContext extends ParserRuleContext {
		public CreateInContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createIn; }
	 
		public CreateInContext() { }
		public void copyFrom(CreateInContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LooKoostisContext extends CreateInContext {
		public LooKoostisContext(CreateInContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterLooKoostis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitLooKoostis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitLooKoostis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateInContext createIn() throws RecognitionException {
		CreateInContext _localctx = new CreateInContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_createIn);
		try {
			_localctx = new LooKoostisContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(66); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddiContext extends ParserRuleContext {
		public AddiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addi; }
	 
		public AddiContext() { }
		public void copyFrom(AddiContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LisaKoostisListiContext extends AddiContext {
		public List<TerminalNode> Nimi() { return getTokens(PizzaParser.Nimi); }
		public TerminalNode Nimi(int i) {
			return getToken(PizzaParser.Nimi, i);
		}
		public LisaKoostisListiContext(AddiContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterLisaKoostisListi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitLisaKoostisListi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitLisaKoostisListi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddiContext addi() throws RecognitionException {
		AddiContext _localctx = new AddiContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_addi);
		try {
			_localctx = new LisaKoostisListiContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(68); match(17);
			setState(69); match(10);
			setState(70); match(14);
			setState(71); match(Nimi);
			setState(72); match(3);
			setState(73); match(Nimi);
			setState(74); match(19);
			setState(75); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddpContext extends ParserRuleContext {
		public AddpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addp; }
	 
		public AddpContext() { }
		public void copyFrom(AddpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LisaPitsaContext extends AddpContext {
		public TerminalNode Nimi() { return getToken(PizzaParser.Nimi, 0); }
		public List<AddContext> add() {
			return getRuleContexts(AddContext.class);
		}
		public AddContext add(int i) {
			return getRuleContext(AddContext.class,i);
		}
		public TerminalNode Arv() { return getToken(PizzaParser.Arv, 0); }
		public LisaPitsaContext(AddpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterLisaPitsa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitLisaPitsa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitLisaPitsa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddpContext addp() throws RecognitionException {
		AddpContext _localctx = new AddpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_addp);
		try {
			int _alt;
			_localctx = new LisaPitsaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(77); match(12);
			setState(78); match(10);
			setState(79); match(14);
			setState(80); match(16);
			setState(81); match(9);
			setState(82); match(Nimi);
			setState(83); match(3);
			setState(84); match(13);
			setState(85); match(Arv);
			setState(86); match(3);
			setState(87); add();
			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=1 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(88); match(3);
					setState(89); add();
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(95); match(19);
			setState(96); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	 
		public AddContext() { }
		public void copyFrom(AddContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LisaKoostisContext extends AddContext {
		public TerminalNode Nimi() { return getToken(PizzaParser.Nimi, 0); }
		public LisaKoostisContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).enterLisaKoostis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PizzaListener ) ((PizzaListener)listener).exitLisaKoostis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PizzaVisitor ) return ((PizzaVisitor<? extends T>)visitor).visitLisaKoostis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_add);
		try {
			_localctx = new LisaKoostisContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(18);
			setState(99); match(9);
			setState(100); match(Nimi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}